Details
-
Bug
-
Status: Resolved
-
Trivial
-
Resolution: Fixed
-
Impala 2.9.0
-
None
Description
FloatVals which are NULL only compare equal to other FloatVals if the float val also matches?
It's already undefined behavior, but it would be nice to be consistent with other types. From the code:
bool operator==(const FloatVal& other) const
{ return is_null == other.is_null && val == other.val; }